# uav-search

./: .gitattributes  CMakeLists.txt  README.md  package.xml
launch/: airsim_bringup.launch  covins_setup.launch  depth_to_pointcloud.launch  drone_bringup.launch  drone_teleop.launch  octomap_server.launch  swarm.launch  vision.launch
misc/: camera.yaml  config.rviz  settings.json
scripts/: run_covins_backend.sh  static_image_publisher.py  yolo_node.py
src/: airsim_bridge_node.cpp  coordinator_node.cpp  drone_controller_node.cpp  teleop.cpp
src/scripts/: static_image_publisher.py  yolo_node.py
