<?xml version="1.0"?>
<package format="2">
    <name>uav_search</name>
    <version>0.0.1</version>
    <description>ROS package for multi-UAV search and rescue simulation using AirSim</description>

    <maintainer email="dflocos@gmail.com">Dorin Flocos</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>geometry_msgs</depend>
    <depend>airsim_ros_pkgs</depend>

    <export>
    </export>
</package>
