<?xml version="1.0"?>
<package format="2">
    <name>uav_search</name>
    <version>0.0.1</version>
    <description>ROS package for multi-UAV search and rescue simulation using AirSim</description>

    <maintainer email="dflocos@gmail.com">Dorin Flocos</maintainer>
    <maintainer email="salajurijal@gmail.com">Salaj Rijal</maintainer>
    <maintainer email="acass2@binghamton.com">Alex Cass</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>tf</depend>
    <depend>geometry_msgs</depend>
    <depend>depth_image_proc</depend>
    <depend>airsim_ros_pkgs</depend>
    <depend>octomap</depend>

    <export>
    </export>
</package>
