<?xml version="1.0"?>
<package format="2">
    <name>uav_search</name>
    <version>0.0.1</version>
    <description>ROS package for multi-UAV search and rescue simulation using AirSim</description>

    <maintainer email="dflocos@gmail.com">Dorin Flocos</maintainer>
    <maintainer email="salajurijal@gmail.com">Salaj Rijal</maintainer>
    <maintainer email="acass2@binghamton.com">Alex Cass</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>depth_image_proc</depend>
    <depend>airsim_ros_pkgs</depend>
    <depend>octomap</depend>

    <export>
    </export>
</package>
